# esp32-nesemu

./: CMakeLists.txt  flashrom.sh  sdkconfig
components/nofrendo/: CMakeLists.txt  config.c  log.c  memguard.h  vid_drv.c
components/nofrendo-esp32/: CMakeLists.txt
components/nofrendo-esp32/src/: psxcontroller.c  spi_lcd.c  video_audio.c
components/nofrendo/libsnss/: libsnss.c
main/: main.c
